issue #10 room filter page - filter overlapping fixes

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,6 +6,8 @@
 
 .header {
   $blockClass: &;
+  position: relative;
+  z-index: 3;
   font-size: 0.875rem;
   color: $color-primary-50;
   background: white;
